card overflow fix

--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -121,6 +121,7 @@
 .catalog__block--picture {
   display: flex;
   justify-content: flex-start;
+  padding: 20px;
   align-items: flex-end;
   min-height: 100%;
   background-color: $color-dark-blue;
@@ -129,6 +130,7 @@
 .catalog__block--picture h3 {
   position: absolute;
   left: 30px;
+  right: 30px;
   bottom: 22px;
 
   @media (max-width: $vp-1023) {
@@ -172,6 +174,7 @@
   line-height: 20px;
   padding: 28px 25px;
   padding-bottom: 35px;
+  padding-right: 20px;
   color: $color-default-white;
   background-color: $color-dark-blue;
 
@@ -209,10 +212,6 @@
 .catalog__block--information span {
   display: block;
   margin-bottom: 12px;
-}
-
-.catalog__block--information span:last-of-type {
-  margin-bottom: 0;
 }
 
 .catalog__block--information a {
